<resources>
    <string name="app_name">الي الله</string>
    <string name="title_home">المصحف المسموع</string>
    <string name="title_dashboard">المصحف</string>
    <string name="title_notifications">حصن المسلم</string>
    <string name="alqruan">المصحف المسموع</string>
    <string name="alqibla">القبلة</string>
    <string name="videos">فيديوهات</string>
    <string name="menu">حصن المسلم</string>
    <string name="loading">جاري التحميل  ...</string>
    <string name="NightMode">الوضع الليلي</string>
    <string name="yes">نعم</string>
    <string name="ok">حسنا</string>
    <string name="cancel">إلغاء</string>
    <string name="savewallpaper">هل تود حفظ هذه الصورة كخلفية لجهازك؟</string>
    <string name="leaveapp">مغادرة التطبيق</string>
    <string name="leavetextmsg">هل تريد الخروج من التطبيق ؟</string>
    <string name="title">العنوان</string>
    <string name="message">الرسالة</string>
    <string name="send">إرسال</string>
    <string name="reportHint">ملاحظة: المرجو شرح المشكل جيدا ليتم حله بأسرع وقت</string>
    <string name="wallhint">خلفيات تتجدد في كل مرة تدخل للتطبيق</string>
    <string name="ramadankareem">رمضان كريم 🌙 </string>
    <string name="hello">مرحبا !</string>
    <string name="firstalertdialogmsg">نشكرك على تحميل هذا التطبيق، لا تنس مشاركته مع الأحباب في هذا الشهر الفضيل و المبادرة إلى التلاوة و الأذكار و حسن الأعمال</string>
    <string name="manualcorr">تصحيحات يدوية :</string>
    <string name="minutes">دقائق</string>
    <string name="locationloading">جاري تحديد الموقع ...</string>
    <string name="itsprayertime">صلاة</string>
    <string name="incity">بمدينة</string>
    <string name="app_desc">التطبيق اليومي لكل مسلم</string>
    <string name="city">مدينة</string>
    <string name="location">تحديد الموقع</string>
    <string name="madina">المدينة</string>
    <string name="fajr">الفجر</string>
    <string name="dohr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghrib">المغرب</string>
    <string name="isha">العشاء</string>
    <string name="menu_prayertimes">أوقات الصلاة</string>
    <string name="menu_prayersettings">إعدادات الصلاة</string>
    <string name="menu_sunrise">أذكار الصباح</string>
    <string name="menu_sunset">أذكار المساء</string>
    <string name="menu_azkar">فضل الأذكار</string>
    <string name="menu_misbaha">مسبحة إلكترونية</string>
    <string name="menu_qibla">إتجاه القبلة</string>
    <string name="menu_zakat">حاسبة الزكاة</string>
    <string name="menu_wallpaper">خلفيات الهاتف</string>
    <string name="menu_widget">سطح الهاتف</string>
    <string name="menu_aboutus">إعدادات التطبيق</string>
    <string name="menu_share">شارك التطبيق</string>
    <string name="menu_set1">التطبيقات</string>
    <string name="menu_set2">الملحقات</string>
    <string name="menu_set3">الإعدادات</string>
    <string name="adkar_sabah_massaa">أذكار الصباح و المساء</string>
    <string name="notifications">التنبيهات</string>
    <string name="appversion">نسخة التطبيق</string>
    <string name="version" translatable="false">0.2</string>
    <string name="privacypolicy">سياسة الخصوصية</string>
    <string name="reportproblem">الإبلاغ عن مشكلة</string>
    <string name="Languages">اللغات</string>
    <string name="givefeedback">تقييم التطبيق</string>
    <string name="developedby"> تم تطوير هذا التطبيق من اقبل HOK مع مراعة حقوق المطورين  السابقين لجزء حصن المسلم شكرا لهم وارجوا ان يكون هذه التطبيق في مزات حسنات كل من ساعد فيه </string>
    <string name="share"> تطبيق الي الله الحصن اليومي للمسلم اللهم اجعله خيرا لكل من يستخدمه والهم اعطي الثوب بي المثل لكل من شاركه</string>
    <string name="ar">اللغة العربية</string>
    <string name="en">english</string>
    <string name="adkarsabah1" translatable="false">أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه ، وَأَعـوذُ بِكَ مِنْ شَـرِّ ما في هـذا اليوم وَشَرِّ ما بَعْـدَه، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر. </string>
    <string name="adkarsabah2" translatable="false">اللّهُـمَّ إِنِّـي أَصْبَـحْتُ أُشْـهِدُك ، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك ، وَمَلَائِكَتَكَ ، وَجَمـيعَ خَلْـقِك ، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك ، وَأَنَّ ُ مُحَمّـداً عَبْـدُكَ وَرَسـولُـك.</string>
    <string name="adkarsabah3" translatable="false">حَسْبِـيَ اللّهُ لا إلهَ إلاّ هُوَ عَلَـيهِ تَوَكَّـلتُ وَهُوَ رَبُّ العَرْشِ العَظـيم.</string>
    <string name="adkarsabah4" translatable="false">اللّهُـمَّ بِكَ أَصْـبَحْنا وَبِكَ أَمْسَـينا ، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ النُّـشُور. </string>
    <string name="adkarsabah5" translatable="false">أَصْبَـحْـنا عَلَى فِطْرَةِ الإسْلاَمِ، وَعَلَى كَلِمَةِ الإِخْلاَصِ، وَعَلَى دِينِ نَبِيِّنَا مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ، وَعَلَى مِلَّةِ أَبِينَا إبْرَاهِيمَ حَنِيفاً مُسْلِماً وَمَا كَانَ مِنَ المُشْرِكِينَ. </string>
    <string name="adkarsabah6" translatable="false">سُبْحـانَ اللهِ وَبِحَمْـدِهِ عَدَدَ خَلْـقِه ، وَرِضـا نَفْسِـه ، وَزِنَـةَ عَـرْشِـه ، وَمِـدادَ كَلِمـاتِـه. </string>
    <string name="adkarsabah7" translatable="false">اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في الدُّنْـيا وَالآخِـرَة ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في ديني وَدُنْـيايَ وَأهْـلي وَمالـي ، اللّهُـمَّ اسْتُـرْ عـوْراتي وَآمِـنْ رَوْعاتـي ، اللّهُـمَّ احْفَظْـني مِن بَـينِ يَدَيَّ وَمِن خَلْفـي وَعَن يَمـيني وَعَن شِمـالي ، وَمِن فَوْقـي ، وَأَعـوذُ بِعَظَمَـتِكَ أَن أُغْـتالَ مِن تَحْتـي. </string>
    <string name="adkarsabah8" translatable="false">أَصْبَـحْـنا وَأَصْبَـحْ المُـلكُ للهِ رَبِّ العـالَمـين ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ خَـيْرَ هـذا الـيَوْم ، فَـتْحَهُ ، وَنَصْـرَهُ ، وَنـورَهُ وَبَـرَكَتَـهُ ، وَهُـداهُ ، وَأَعـوذُ بِـكَ مِـنْ شَـرِّ ما فـيهِ وَشَـرِّ ما بَعْـدَه. </string>
    <string name="adkarsabah9" translatable="false">اللّهُـمَّ عالِـمَ الغَـيْبِ وَالشّـهادَةِ فاطِـرَ السّماواتِ وَالأرْضِ رَبَّ كـلِّ شَـيءٍ وَمَليـكَه ، أَشْهَـدُ أَنْ لا إِلـهَ إِلاّ أَنْت ، أَعـوذُ بِكَ مِن شَـرِّ نَفْسـي وَمِن شَـرِّ الشَّيْـطانِ وَشِرْكِهِ ، وَأَنْ أَقْتَـرِفَ عَلـى نَفْسـي سوءاً أَوْ أَجُـرَّهُ إِلـى مُسْـلِم.</string>
    <string name="adkarsabah10" translatable="false">اللّهُـمَّ ما أَصْبَـَحَ بي مِـنْ نِعْـمَةٍ أَو بِأَحَـدٍ مِـنْ خَلْـقِك ، فَمِـنْكَ وَحْـدَكَ لا شريكَ لَـك ، فَلَـكَ الْحَمْـدُ وَلَـكَ الشُّكْـر. </string>
    <string name="adkarsabah11" translatable="false">أسْتَغْفِرُ اللهَ العَظِيمَ الَّذِي لاَ إلَهَ إلاَّ هُوَ، الحَيُّ القَيُّومُ، وَأتُوبُ إلَيهِ. </string>
    <string name="adkarsabah12" translatable="false">بِسـمِ اللهِ الذي لا يَضُـرُّ مَعَ اسمِـهِ شَيءٌ في الأرْضِ وَلا في السّمـاءِ وَهـوَ السّمـيعُ العَلـيم. </string>
    <string name="adkarsabah13" translatable="false">اللّهـمَّ أَنْتَ رَبِّـي لا إلهَ إلاّ أَنْتَ ، خَلَقْتَنـي وَأَنا عَبْـدُك ، وَأَنا عَلـى عَهْـدِكَ وَوَعْـدِكَ ما اسْتَـطَعْـت ، أَعـوذُبِكَ مِنْ شَـرِّ ما صَنَـعْت ، أَبـوءُ لَـكَ بِنِعْـمَتِـكَ عَلَـيَّ وَأَبـوءُ بِذَنْـبي فَاغْفـِرْ لي فَإِنَّـهُ لا يَغْـفِرُ الذُّنـوبَ إِلاّ أَنْتَ . </string>
    <string name="adkarsabah14" translatable="false">اللّهُـمَّ عافِـني في بَدَنـي ، اللّهُـمَّ عافِـني في سَمْـعي ، اللّهُـمَّ عافِـني في بَصَـري ، لا إلهَ إلاّ أَنْـتَ.</string>
    <string name="adkarsabah15" translatable="false">اللّهُـمَّ إِنّـي أَعـوذُ بِكَ مِنَ الْكُـفر ، وَالفَـقْر ، وَأَعـوذُ بِكَ مِنْ عَذابِ القَـبْر ، لا إلهَ إلاّ أَنْـتَ. </string>
    <string name="adkarsabah16" translatable="false">رَضيـتُ بِاللهِ رَبَّـاً وَبِالإسْلامِ ديـناً وَبِمُحَـمَّدٍ صلى الله عليه وسلم نَبِيّـاً.</string>
    <string name="adkarsabah17" translatable="false">يَا حَيُّ يَا قيُّومُ بِرَحْمَتِكَ أسْتَغِيثُ أصْلِحْ لِي شَأنِي كُلَّهُ وَلاَ تَكِلْنِي إلَى نَفْسِي طَـرْفَةَ عَيْنٍ. </string>
    <string name="adkarsabah18" translatable="false">اللَّهُمَّ أَنْتَ رَبِّي لا إِلَهَ إِلا أَنْتَ ، عَلَيْكَ تَوَكَّلْتُ ، وَأَنْتَ رَبُّ الْعَرْشِ الْعَظِيمِ ، مَا شَاءَ اللَّهُ كَانَ ، وَمَا لَمْ يَشَأْ لَمْ يَكُنْ ، وَلا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ الْعَلِيِّ الْعَظِيمِ ، أَعْلَمُ أَنَّ اللَّهَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ ، وَأَنَّ اللَّهَ قَدْ أَحَاطَ بِكُلِّ شَيْءٍ عِلْمًا ، اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي ، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا ، إِنَّ رَبِّي عَلَى صِرَاطٍ مُسْتَقِيمٍ.</string>
    <string name="adkarsabah19" translatable="false">اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ الْهَمِّ وَالْحَزَنِ، وَأَعُوذُ بِكَ مِنْ الْعَجْزِ وَالْكَسَلِ، وَأَعُوذُ بِكَ مِنْ الْجُبْنِ وَالْبُخْلِ، وَأَعُوذُ بِكَ مِنْ غَلَبَةِ الدَّيْنِ، وَقَهْرِ الرِّجَالِ.</string>
    <string name="adkarsabah20" translatable="false">اللَّهُمَّ إِنَّا نَعُوذُ بِكَ مِنْ أَنْ نُشْرِكَ بِكَ شَيْئًا نَعْلَمُهُ ، وَنَسْتَغْفِرُكَ لِمَا لَا نَعْلَمُهُ</string>
    <string name="adkarsabah21" translatable="false">أَعـوذُ بِكَلِمـاتِ اللّهِ التّـامّـاتِ مِنْ شَـرِّ ما خَلَـق.</string>
    <string name="adkarsabah22" translatable="false">اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد. </string>
    <string name="adkarsabah23" translatable="false">يَا رَبِّ، لَكَ الْحَمْدُ كَمَا يَنْبَغِي لِجَلَالِ وَجْهِكَ، وَلِعَظِيمِ سُلْطَانِكَ.</string>
    <string name="adkarsabah24" translatable="false">اللَّهُمَّ إِنِّي أَسْأَلُكَ عِلْمًا نَافِعًا، وَرِزْقًا طَيِّبًا، وَعَمَلًا مُتَقَبَّلًا. </string>
    <string name="adkarsabah25" translatable="false">لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلِّ شَيْءِ قَدِيرِ.</string>
    <string name="adkarsabah26" translatable="false">سُبْحـانَ اللهِ وَبِحَمْـدِهِ. </string>
    <string name="adkarsabah27" translatable="false">أسْتَغْفِرُ اللهَ وَأتُوبُ إلَيْهِ </string>
    <string name="adkarsabah28" translatable="false">اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ. </string>
    <string name="adkarsabah29" translatable="false">قُلْ هُوَ ٱللَّهُ أَحَدٌ، ٱللَّهُ ٱلصَّمَدُ، لَمْ يَلِدْ وَلَمْ يُولَدْ، وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ.</string>
    <string name="adkarsabah30" translatable="false">قُلْ أَعُوذُ بِرَبِّ ٱلْفَلَقِ، مِن شَرِّ مَا خَلَقَ، وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ، وَمِن شَرِّ ٱلنَّفَّٰثَٰتِ فِى ٱلْعُقَدِ، وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ.</string>
    <string name="adkarsabah31" translatable="false">قُلْ أَعُوذُ بِرَبِّ ٱلنَّاسِ، مَلِكِ ٱلنَّاسِ، إِلَٰهِ ٱلنَّاسِ، مِن شَرِّ ٱلْوَسْوَاسِ ٱلْخَنَّاسِ، ٱلَّذِى يُوَسْوِسُ فِى صُدُورِ ٱلنَّاسِ، مِنَ ٱلْجِنَّةِ وَٱلنَّاسِ.</string>
    <string name="adkarmassaa1" translatable="false">أَمْسَيْـنا وَأَمْسـى المـلكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذهِ اللَّـيْلَةِ وَخَـيرَ ما بَعْـدَهـا ، وَأَعـوذُ بِكَ مِنْ شَـرِّ ما في هـذهِ اللَّـيْلةِ وَشَرِّ ما بَعْـدَهـا ، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر. </string>
    <string name="adkarmassaa2" translatable="false">اللّهُـمَّ إِنِّـي أَمسيتُ أُشْـهِدُك ، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك ، وَمَلَائِكَتَكَ ، وَجَمـيعَ خَلْـقِك ، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك ، وَأَنَّ ُ مُحَمّـداً عَبْـدُكَ وَرَسـولُـك. </string>
    <string name="adkarmassaa3" translatable="false">اللّهُـمَّ ما أَمسى بي مِـنْ نِعْـمَةٍ أَو بِأَحَـدٍ مِـنْ خَلْـقِك ، فَمِـنْكَ وَحْـدَكَ لا شريكَ لَـك ، فَلَـكَ الْحَمْـدُ وَلَـكَ الشُّكْـر. </string>
</resources>