<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:text="@string/Languages"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioButtongroup"

            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/ar_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ar"
                android:textAlignment="viewStart" />

            <RadioButton
                android:id="@+id/en_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/en"
                android:textAlignment="viewStart" />
        </RadioGroup>
    </LinearLayout>
</androidx.cardview.widget.CardView>